Updated chapter 6 with photometry processing procedure done with Dr. Raul Michel Updated photometry results and observation logs

--- a/Observaciones/Observaciones.tex
+++ b/Observaciones/Observaciones.tex
@@ -1,11 +1,16 @@
 \chapter{Observaciones}
 
-El segundo objetivo principal de este trabajo de tesis de maestría es realizar
-una campaña de observación a \atoObjId. Desde el \textbf{Observatorio
-Astronómico Universitario} en Iturbide, N.L. se midió el brillo del sistema
-durante 9 noches de observación; mediante la técnica de fotometría diferencial
-se obtiene una curva de luz, la cual se utiliza para determinar la naturaleza
-del objeto observado.
+El segundo objetivo principal de este trabajo de investigación fue realizar una
+campaña de observación al objeto de interés \atoObjId. Desde el
+\textbf{Observatorio Astronómico Universitario} (\textbf{OAU}) en Iturbide, N.L.
+se midió el brillo del sistema durante 9 noches de observaciones sin filtro, del
+cual utilizando la técnica de fotometría diferencial se obtuvo una curva de luz
+del sistema. Los datos observacionales producidos de este estudio se utilizan
+como un conjunto complementario a las curvas fotométricas del objeto descritas
+en los capítulos anteriores; a pesar de no tener información del color del
+sistema las observaciones realizadas desde el OAU son de las más recientes
+realizadas\textemdash junto a los datos de ZTF\textemdash los cuales ofrecen una
+vista al comportamiento y estado actual de \atoObjIdNoSpace.
 
 \input{Observaciones/Secciones/Observatorio.tex}
 \input{Observaciones/Secciones/Fotometria.tex}
