--- a/ref.bib
+++ b/ref.bib
@@ -800,3 +800,18 @@ ADS Bibcode: 1959cbs..book.....K},
 	langid = {english},
 	note = {Publisher: The American Astronomical Society}
 }
+
+@inproceedings{tody_iraf_1986,
+	location = {Tucson},
+	title = {The Iraf Data Reduction And Analysis System},
+	url = {http://proceedings.spiedigitallibrary.org/proceeding.aspx?doi=10.1117/12.968154},
+	doi = {10.1117/12.968154},
+	abstract = {The Image Reduction and Analysis Facility ({IRAF}) is a general purpose software system for the reduction and analysis of scientiﬁc data. The {IRAF} system provides a good selection of programs for general image processing and graphics applications, plus a large selection of programs for the reduction and analysis of optical astronomy data. The system also provides a complete modern scientiﬁc programming environment, making it straightforward for institutions using {IRAF} to add their own software to the system. Every effort has been made to make the system as portable and device independent as possible, so that the system may be used on a wide variety of host computers and operating systems with a wide variety of graphics and image display devices.},
+	eventtitle = {1986 Astronomy Conferences},
+	pages = {733},
+	author = {Tody, Doug},
+	editor = {Crawford, David L.},
+	urldate = {2024-07-09},
+	date = {1986-10-13},
+	langid = {english}
+}
