--- a/Muestra/Secciones/CriteriosDeSeleccion.tex
+++ b/Muestra/Secciones/CriteriosDeSeleccion.tex
@@ -12,29 +12,29 @@ búsqueda. El código completo se encuentra en la carpeta
 cuyo punto de entrada se ubica en el script
 \href{URLhttps://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/obsrv_plan/main.py}{\code{main.py}}.
 
-\section{Szkody, et al. (2002): Cataclysmic Variables from the Sloan Digital Sky Survey} \label{muestra:szkody2002}
+\section{Szkody et al. (2002): Cataclysmic Variables from the Sloan Digital Sky Survey} \label{muestra:szkody2002}
 
 Con el lanzamiento del SDSS, Szkody y su equipo reconocieron una nueva área de
-oportunidad para expandir la población de variables cataclísmicas (VCs)
+oportunidad para expandir la población de \textit{variables cataclísmicas} (VCs)
 conocidas en la Galaxia. De interés particular son aquellos sistemas que más se
 aproximan al periodo mínimo según los modelos evolutivos de las VCs; estos
 objetos llegan a magnitudes fuera del alcance de la mayoría de los telescopios
 usados hasta este entonces, por lo cual no han sido el objetivo de estudio en la
 literatura. Partiendo de SDSS Szkody y colaboradores iniciaron una búsqueda de
-VCs tenues, con la expectativa de capturar una muestra representativa de
+VCs, con la expectativa de capturar una muestra representativa de
 variables cataclísmicas en nuestra galaxia, en particular obteniendo muestras de
 poblaciones históricamente imperceptibles a nuestros instrumentos.
 
-Para restringir los sistemas que buscar, Szkody y colaboradores aplicaron un
-criterio de color basado en el trabajo de \citeyearparen{krisciunas1998SdssCriteria}, en
-el cual lograron determinar concentraciones de diferentes tipos de objetos
-utilizando diagramas de color-color. A pesar de haber hecho estas observaciones
-antes del año de lanzamiento de SDSS, Krisciunas y colaboradores lograron
-obtener observaciones utilizando equipo cuyas características se asemejan a las
-de los instrumentos utilizados para SDSS. Partiendo de estos resultados, Szkody
-y colaboradores determinaron criterios en las regiones azules y rojas del
-espectro, cuyos valores se encuentran en las  
-\refequations{muestra:szkody2002:criterioeqs}.
+Para restringir los sistemas que buscar, \citeyearparen{szkody2002CvSearchSdss}
+aplicaron un criterio de color basado en el trabajo de
+\citeyearparen{krisciunas1998SdssCriteria}, en el cual lograron determinar
+concentraciones de diferentes tipos de objetos utilizando diagramas de
+color-color. A pesar de haber hecho estas observaciones antes del año de
+lanzamiento de SDSS, Krisciunas y colaboradores lograron obtener observaciones
+utilizando equipo cuyas características se asemejan a las de los instrumentos
+utilizados para SDSS. Partiendo de estos resultados, Szkody y colaboradores
+determinaron los siguientes criterios en las regiones azules y rojas del
+espectro:
 
 \begin{equation}
 	\begin{split}
@@ -49,8 +49,8 @@ espectro, cuyos valores se encuentran en las
 Una vez recabada la muestra de candidatas a observar, Szkody y colaboradores
 confirmaron su estatus como variables cataclísmicas basado en los espectros
 obtenidos del SDSS desde el \textit{Apache Point Observatory}. Estos datos los
-complementaron con observaciones de espectrografía con el telescopio de 3.5m en
-el \textit{Apache Point Observatory} y observaciones fotométricas utilizando el
+complementaron con observaciones de espectroscopía con el telescopio de 3.5m en
+el \textit{Apache Point Observatory} así como observaciones fotométricas utilizando el
 telescopio de 0.76m en el \textit{Manastash Ridge Observatory} de la Universidad
 de Washington. En total identificaron 22 sistemas como variables cataclísmicas,
 incluyendo 3 objetos previamente estudiados e identificados como tal. Presentan
@@ -72,7 +72,7 @@ la concentración de los objetos en el diagrama color-color, vistos en la
 
 \section{Búsqueda en Gaia}
 
-Para obtener la muestra inicial de objetos de interés acudimos a la base de
+Para obtener la muestra inicial de objetos de interés recurrimos a la base de
 datos de Gaia. La selección de objetos fue llevada a cabo dentro del
 \textit{Gaia Archive} utilizando su interfaz de ADQL. Los criterios
 definidos por Szkody y colaboradores solo fueron definidos para el sistema
@@ -162,18 +162,19 @@ Astronómico Universitario} en Iturbide, N.L., descrito en la
 
 \section{ATO J339.9469+45.1464 - EclBin}
 
-\citeyearparen{atlasATOObjectDiscovery} es un estudio donde se realizó una búsqueda de
-estrellas variables dentro del catálogo del \textbf{Asteroid Terrestrial-impact
-Last Alert System} (\textbf{ATLAS}), aprovechando su cobertura de
-aproximadamente \num{13000} $\mathrm{deg}^2$ al menos 4 veces por noche. Esta
-cadencia de observación es ideal para observar estrellas variables; el tiempo de
-observación es suficientemente corto para obtener una curva de luz adecuada para
-estudiar estos sistemas. Lograron clasificar las estrellas variable del catálogo
-en 15 distintas categorías de la morfología de sus curvas de luz; de estas
-reportan que \num{74700} fuentes son binarias eclipsantes. A pesar de haber
-confirmado la clasificación de estas fuentes, aún quedan varios sistemas cuya
-naturaleza es desconocido, sus únicos descriptores vienen siendo una
-clasificación tentativa.
+\citeyearparen{atlasATOObjectDiscovery} realizaron una búsqueda de estrellas
+variables dentro de la primera publicación de datos del catálogo
+\textbf{Asteroid Terrestrial-impact Last Alert System} (\textbf{ATLAS}), el cual
+contiene las observaciones realizadas por el telescopio Haleakalā durante los
+primeros 2 años de operación hasta finales de Junio del 2017, aprovechando su
+cobertura de aproximadamente \num{13000} $\mathrm{deg}^2$ al menos 4 veces por
+noche. Esta cadencia de observación es ideal para observar estrellas variables;
+el tiempo de observación es suficientemente corto para obtener una curva de luz
+adecuada para estudiar estos sistemas. Lograron clasificar las estrellas
+variable del catálogo en 15 distintas categorías dependiendo de la morfología de
+sus curvas de luz; de estas reportan que \num{74700} fuentes son binarias
+eclipsantes. A pesar de haber confirmado la clasificación de estas fuentes, aún
+quedan varios sistemas cuya naturaleza es desconocida.
 
 \textbf{\atoObjId} está clasificado como una de estas candidatas a binaria
 eclipsante. Como este sistema carece una clasificación concreta, no existe mucha
@@ -249,7 +250,7 @@ de luz en fase\textemdash se realizó una búsqueda de datos en el catálogo de
 ZTF, en particular el \textit{Data Release 20} la última versión de los datos
 publicados durante la fase de recolección de datos del proyecto. Para \atoObjId
 se obtuvieron 2 curvas de luz en las bandas ZTF:g y ZTF:r, las cuales no han
-sido corregidos para tomar en cuenta el color del sistema en el procesamiento
+sido corregidas para tomar en cuenta el color del sistema en el procesamiento
 hecho por IRSA. Las observaciones de ZTF se registraron desde el 20 de abril del
 2018 hasta el 2 de julio del 2023 para el filtro ZTF:g, y desde el 17 de mayo
 del 2018 hasta el 2 de julio del 2023 para el filtro ZTF:r. Las curvas de luz
