Fixed light curve graph spacing in chapter 5

--- a/Muestra/Secciones/CriteriosDeSeleccion.tex
+++ b/Muestra/Secciones/CriteriosDeSeleccion.tex
@@ -145,7 +145,7 @@ Astronómico Universitario} en Iturbide, N.L., descrito en la
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.4]{Muestra/Secciones/Figures/Figura Gaia SIMBAD Busqueda Resultados.png}
+	\includegraphics[scale=0.32]{Muestra/Secciones/Figures/Figura Gaia SIMBAD Busqueda Resultados.png}
 	\caption{Histograma de las clasificaciones de los objetos capturados en la
 	búsqueda dentro del catálogo GDR3, haciendo un análisis cruzado con la base
 	de datos de SIMBAD. En rojo se resaltan las categorías de principal interés:
@@ -214,13 +214,13 @@ libres.
 % TODO: maybe move to appendix?
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.42]{Muestra/Secciones/Figures/GDR3-Light-Curves.png}
+	\includegraphics[scale=0.4]{Muestra/Secciones/Figures/GDR3-Light-Curves.png}
 	\caption{Magnitud de \atoObjId registrada en la base de datos de Gaia DR3
-	bajo su número identificador en el catálogo. Se puede apreciar la
-	variabilidad de aproximadamente 0.5 mag en el brillo del sistema, la cual la
-	atribuimos a la presencia de eclipses en el sistema binario. Las tres curvas
-	de luz corresponden a cada pasabanda de la misión de Gaia: verde es la banda
-	$G$, en azul la banda $G_{BP}$, y en rojo la banda $G_{RP}$.
+	bajo su número identificador en el catálogo. La variabilidad de
+	aproximadamente 0.5 mag en el brillo del sistema se atribuye a la presencia
+	de eclipses en el sistema binario. Las tres curvas de luz corresponden a
+	cada pasabanda de la misión de Gaia: verde es la banda $G$, en azul la banda
+	$G_{BP}$, y en rojo la banda $G_{RP}$.
 	[\citeyearparen{gdr3ReleaseDocumentation}]}
 	\label{gdr3AtoObjLightCurves}
 \end{figure}
@@ -259,7 +259,7 @@ completas se pueden ver en la \reffigure{figuraZtfCurvasLuz}.
 % TODO: maybe move to appendix?
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.42]{Muestra/Secciones/Figures/Figura ZTF Light Curves.png}
+	\includegraphics[scale=0.4]{Muestra/Secciones/Figures/Figura ZTF Light Curves.png}
 	\caption{Curvas de luz en las pasabandas ZTF:g (verde) y ZTF:r (rojo) para \atoObjId, 
 	obtenido del catálogo de ZTF por su identificador de SIMBAD.}
 	\label{figuraZtfCurvasLuz}
