Updated chapter 7 with new data Redid periodogram to run locally with own code instead of IRSA tool

--- a/ref.bib
+++ b/ref.bib
@@ -815,3 +815,21 @@ ADS Bibcode: 1959cbs..book.....K},
 	date = {1986-10-13},
 	langid = {english}
 }
+
+@article{vanderplas_periodograms_lombscargle_multiband_2015,
+	title = {{PERIODOGRAMS} {FOR} {MULTIBAND} {ASTRONOMICAL} {TIME} {SERIES}},
+	volume = {812},
+	issn = {0004-637X},
+	url = {https://dx.doi.org/10.1088/0004-637X/812/1/18},
+	doi = {10.1088/0004-637X/812/1/18},
+	abstract = {This paper introduces the multiband periodogram, a general extension of the well-known Lomb–Scargle approach for detecting periodic signals in time-domain data. In addition to advantages of the Lomb–Scargle method such as treatment of non-uniform sampling and heteroscedastic errors, the multiband periodogram significantly improves period finding for randomly sampled multiband light curves (e.g., Pan-{STARRS}, {DES}, and {LSST}). The light curves in each band are modeled as arbitrary truncated Fourier series, with the period and phase shared across all bands. The key aspect is the use of Tikhonov regularization which drives most of the variability into the so-called base model common to all bands, while fits for individual bands describe residuals relative to the base model and typically require lower-order Fourier series. This decrease in the effective model complexity is the main reason for improved performance. After a pedagogical development of the formalism of least-squares spectral analysis, which motivates the essential features of the multiband model, we use simulated light curves and randomly subsampled {SDSS} Stripe 82 data to demonstrate the superiority of this method compared to other methods from the literature and find that this method will be able to efficiently determine the correct period in the majority of {LSST}’s bright {RR} Lyrae stars with as little as six months of {LSST} data, a vast improvement over the years of data reported to be required by previous studies. A Python implementation of this method, along with code to fully reproduce the results reported here, is available on {GitHub}.},
+	pages = {18},
+	number = {1},
+	journaltitle = {The Astrophysical Journal},
+	shortjournal = {{ApJ}},
+	author = {{VanderPlas}, Jacob T. and Ivezic´, Željko},
+	urldate = {2024-07-17},
+	date = {2015-10},
+	langid = {english},
+	note = {Publisher: The American Astronomical Society}
+}
