--- a/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
+++ b/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
@@ -1,66 +1,78 @@
-\chapter{Normalización de Flujos} \label{Metodologia:NormalizacionFlujos}
+\chapter{Normalización de Flujos y Preservación de Color} \label{Metodologia:NormalizacionFlujos}
 
-Tenemos a nuestra disposición las cuentas de fotones que corresponden a sus
-magnitudes para las curvas de luz de Gaia, para las cuales el flujo reportado es
-el promedio de todas las mediciones hechas en un transito, e Iturbide. Sin
-embargo, estas cuentas crudas no son adecuadas para el ajuste de modelo con
-PHOEBE; estas producen resultados no físicos cuando son utilizadas sin
-tratamiento adicional. Para esto las magnitudes determinadas en la sección
-anterior se convierten a flujos normalizados con la
-\refequation{normFlujosEcuacion}. Esta transformación fue aplicada a todas las
-curvas de luz recabadas (Gaia, ZTF, Iturbide) para poder trabajar con datos
-consistentes al momento de desarrollar el modelo computacional en PHOEBE.
+Las curvas de luz obtenidas de los catálogos Gaia y ZTF al igual que las
+observaciones realizadas en el OAU permiten el estudio de \atoObjId ajustando un
+modelo de un sistema binario eclipsante utilizando PHOEBE. Sin embargo, PHOEBE
+trabaja directamente con flujos; al calcular el modelo hacia adelante PHOEBE
+integra las intensidades calculadas para cada elemento superficial de ambas
+estrellas e integra la radiación emergente en la dirección del observador para
+obtener una medición del flujo en unidades de $\mathrm{W} \mathrm{m}^{-2}$. Los
+datos obtenidos del catálogo de Gaia vienen con el flujo registrado por el
+satélite de cada tránsito del objeto por su campo de visión\textemdash este
+viene reportado en unidades de $\mathrm{e}^{-} \mathrm{s}^{-1}$, el cual se
+puede utilizar directamente en PHOEBE en el caso de no necesitar conocer la
+luminosidad absoluta de las componentes estelares. 
+
+Los datos recabados del catálogo de ZTF no reportan alguna medición directa del
+flujo recibido\textemdash estos solo reportan las magnitudes y sus errores
+obtenidas de su procesamiento fotométrico. El procesamiento de las imágenes en
+cada filtro descrito por
+\citeyearparen{masci_ztf_data_processing_products_archive_2018} da como
+resultado curvas de luz calibradas con estrellas de calibración del catálogo
+Pan-STARRS1. Aunque no es posible obtener una medición del flujo recibido sin
+conocer el flujo $f_0$ que corresponde a una magnitud $m_0$, es posible obtener
+curvas de flujos normalizados que preservan la información del color del sistema
+ofrecido por la fotometría multibanda. Para cada punto de magnitud $m_p$ para la
+pasabanda $p$ se aplica la siguiente transformación para obtener el flujo
+normalizado:
 
 \begin{eqfloat}[!ht]
 	\centering
 	\begin{equation}
-		f_p = 10^{-\frac{2}{5} \cdot (m_p - m_0)}
+		f_p = 10^{-\frac{2}{5} (m_p - m_0)}
 	\end{equation}
-	\caption{Ecuación usada para obtener flujos para cada pasa banda $p$. Esta
-		determina el flujo normalizado $f_p$ desde la magnitud reportada $m_p$
-		utilizando una magnitud de referencia $m_0$.}
-	\label{normFlujosEcuacion}
+	\blankcaption
+	\label{ecuacionNormalizarFlujos}
 \end{eqfloat}
 
-\section{Preservación de Color}
+Donde $m_0$ es la magnitud de referencia. En vez de escoger una magnitud $m_0$
+para cada pasabanda se elige solo un valor de $m_0$ el cual se aplica a ambas
+curvas de ZTF, dando como resultado el flujo relativo obtenido del sistema en
+base a su distribución de energía espectral (SED). Este dato permite el ajuste
+de la temperatura efectiva del sistema sin necesidad de acudir a una estimación
+a priori basado en relaciones analíticas o estadísticas con respecto a otros
+parámetros del modelo
+[\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{5.1.2.2}]. A la
+vez, al tener una manera concreta de evaluar de manera directa la temperatura
+efectiva del sistema es posible conocer la incertidumbre utilizando solo datos
+fotométricos. Para obtener el flujo normalizado de las curvas de ZTF se utilizó
+la magnitud del sistema en la fase 0.25 en la pasabanda ZTF:g. El resultado se
+puede ver en la \reffigure{figuraNormFlujosCurvas}. El código donde se realizó
+este procedimiento se encuentra en el Notebook
+\href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/ztf/light-curve-processing.ipynb}{\code{light-curve-processing.ipynb}}.
 
-% TODO: figure out how to cite specific chapter of PHOEBE textbook (page 111) without having to create a bunch of citations for each section used
-	% ideally would mention the chapters/pages used in a single citation
-Gracias a las observaciones en varias pasa bandas tenemos información del color
-del sistema, debido a la diferencia de magnitud. Sin embargo PHOEBE trabaja solo
-con flujos, por lo cual la transformación descrita en la
-\refthesissection{Metodologia:NormalizacionFlujos} fue necesaria. Para preservar el
-color por diferencia de magnitud se determina un solo valor de $m_0$ con el cual
-convertir las magnitudes; este $m_0$ corresponde a la magnitud en 0.25 de fase
-del pasa bandas más tenue del sistema. PHOEBE tablas de coeficientes que
-relacionan la temperatura efectiva del sistema binario con la diferencia de
-flujos. \citeyearparen{phoebeScientificReference} 
-
-En este trabajo se dividieron las curvas de luz de \atoObjId basado en su
-fuente: las de Gaia ($G, G_{BP}, G_{RP}$), las de ZTF ($ZTF:G, ZTF:R$), y la de
-Iturbide. Podemos determinar 2 diferentes colores del sistema, entre la
-diferencia de color en Gaia y ZTF (como solo se observó a \atoObjId con un solo
-filtro en Iturbide no contamos con datos de color). Para ZTF se tomó la
-magnitud de $ZTF:G$. Las curvas de luz en fase se pueden ver en la
-\reffigure{normFlujosCurvas}, donde se puede apreciar como preserva la
-diferencia de magnitud vista en \reffigure{gaiaIturbideZtfPhaseFold}. El
-código responsable de esta reducción se encuentra en
-\href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/gaia/light_curves.ipynb}{\code{light\_curves.ipynb}}
-para Gaia,
-\href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/ztf/light-curve-processing.ipynb}{\code{light-curve-processing.ipynb}}
-para ZTF, y
-\href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/iturbide/iraf/qphot_timeseries_analysis.ipynb}{\code{qphot\_timeseries\_analysis.ipynb}}
-para Iturbide.
+Debido a que la curva de luz de las observaciones hechas en el OAU en Iturbide,
+N.L. son magnitudes diferenciales, no es posible determinar el flujo real
+incidente a la CCD. Por lo tanto se adopta el mismo procedimiento hecho para las
+curvas de luz de ZTF. Utilizando la \refequation{ecuacionNormalizarFlujos} los
+flujos normalizados se obtuvieron usando la magnitud en fase 0.25 como el valor
+de $m_0$, el código presente en el Notebook
+\href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/period-analysis/periodogram.ipynb}{\code{periodogram.ipynb}}.
+La curva de luz resultante se puede ver en la
+\reffigure{figuraNormFlujosCurvas}. Como se mencionó al principio del capítulo,
+no fue necesario tratar las curvas obtenidas de Gaia DR3 de esta manera, debido
+a que los datos obtenidos de la fotometría de
+época\footnote{\url{https://gea.esac.esa.int/archive/documentation/GDR3/Gaia_archive/chap_datamodel/sec_dm_photometry/ssec_dm_epoch_photometry.html}}
+ya reporta el flujo medido por Gaia. 
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.3]{Metodologia/Secciones/NormalizacionFlujos/Figures/ZTF Normalized Flux.png}
-	\includegraphics[scale=0.3]{Metodologia/Secciones/NormalizacionFlujos/Figures/GDR3 Flux.png}
+	\includegraphics[scale=0.4]{Metodologia/Secciones/NormalizacionFlujos/Figures/ZTF Normalized Flux.png}
 	\includegraphics[scale=0.4]{Metodologia/Secciones/NormalizacionFlujos/Figures/Iturbide Normalized Flux.png}
 
-	\caption{Flujo en fase de cada curva de luz utilizada. El catálogo de Gaia
-		DR3 ya tiene reportado el flujo del sistema, por lo cual este se utilizó
-		para el modelo en vez de obtener un flujo normalizado partiendo de las
-		magnitudes.}
-	\label{normFlujosCurvas}
+	\caption{Flujo en fase de las curvas de luz obtenidas para \atoObjIdNoSpace.
+	De estos dos conjuntos de datos solo ZTF contiene información del color del
+	sistema, y por ende una cantidad medible del cual determinar la temperatura
+	efectiva del sistema.}
+	\label{figuraNormFlujosCurvas}
 \end{figure}
